--- a/main.css
+++ b/main.css
@@ -89,6 +89,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    padding:15px;
+    padding-right: 40px;
+    border-radius: 10px;
+    background: rgba(0,0,0,0.2)
 }
 
 .future-forecast .today .day{
