--- a/main.css
+++ b/main.css
@@ -65,6 +65,7 @@ body {
   border-radius: 10px;
   margin: 10px 0;
   border: 1px solid #eee;
+  
 }
 
 .current-info .others .weather-item {
@@ -105,7 +106,7 @@ body {
 }
 
 .future-forecast .today .temp {
-  font-size: 18px;
+  font-size: 16px; /* 18px */
   padding-top: 15px;
 }
 
@@ -120,9 +121,9 @@ body {
   justify-content: center;
   margin: 0 10px;
   border: 1px solid #eee;
-  border-radius: 10px;
   padding: 15px;
-  /*background: rgba(0,0,0,0.2) */
+  border-radius: 10px;
+  background: rgba(0,0,0,0.2);
 }
 
 .weather-forecast .weather-forecast-item .day {
@@ -134,7 +135,7 @@ body {
 
 .weather-forecast .weather-forecast-item .temp {
   font-weight: 100;
-  /* font-size: 12px; */
+  font-size: 12px;
 }
 
 @media only screen and (max-width: 730px) {
@@ -145,12 +146,12 @@ body {
   .future-forecast {
     justify-content: start;
     align-items: none;
-    overflow-y: scroll;
+    overflow-x: scroll;
   }
 
-  .future-forecast .today .temp {
+  /* .future-forecast .today .temp {
     font-size: 23px;
-  }
+  } // queda bien el que viene de base (16px) */ 
 
   .date-container .time {
     font-size: 50px;
@@ -173,6 +174,6 @@ body {
   .future-forecast {
     justify-content: start;
     align-items: none;
-    overflow-y: scroll;
+    overflow-x: scroll;
   }
 }
