--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
 }
 
 .fecha-container .tiempo {
-  font-size: 56px;
+  font-size: 86px;
 }
 
 .fecha-container #am-pm {
@@ -40,7 +40,7 @@ body {
 }
 
 .fecha-container .fecha {
-  font-size: 24px;
+  font-size: 36px;
 }
 
 .fecha-container .otros .elem-tiempo #elem-tiempo-valor {
@@ -77,7 +77,8 @@ body {
 }
 
 .prevision-futura {
-  background: rgba(24, 24, 27, 0.8);
+  /* background: rgba(24, 24, 27, 0.8); */
+  background: rgba(206, 206, 205, 0.5);
   padding: 25px;
   position: fixed;
   bottom: 0;
@@ -98,7 +99,8 @@ body {
   padding: 15px;
   padding-right: 40px;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .prevision-futura .hoy .dia {
@@ -126,7 +128,8 @@ body {
   border: 1px solid #eee;
   padding: 15px;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .prevision-tiempo .elem-prevision-tiempo .dia {
@@ -141,7 +144,7 @@ body {
   font-size: 12px;
 }
 
-@media only screen and (max-width: 396px) {
+@media only screen and (max-width: 450px) {
   .zona-horaria,
   .pais {
     display: none;
@@ -163,20 +166,20 @@ body {
     font-size: 23px;
   } // queda bien el que viene de base (16px) */
 
-  .fecha-container .tiempo {
-    font-size: 50px;
-  }
+  /* .fecha-container .tiempo {
+    font-size: 80px;
+  } */
 
-  .fecha-container .fecha {
+  /* .fecha-container .fecha {
     font-size: 20px;
-  }
+  } */
 
   .info-actual .otros {
     padding: 12px;
   }
 
   .info-actual .otros .elem-tiempo {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
 
