Background cambia segun la condicion atmosferica

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url("https://www.cambridge.org/elt/blog/wp-content/uploads/2019/02/background-3268840_1920.jpg");
+  /* background: url("https://www.cambridge.org/elt/blog/wp-content/uploads/2019/02/background-3268840_1920.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
