--- a/main.css
+++ b/main.css
@@ -51,8 +51,13 @@ body {
   text-align: end;
 }
 
+.lugar-container .lugar-ubicacion {
+  font-size: 24px;
+  font-weight: 300;
+}
+
 .lugar-container .zona-horaria {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 100;
 }
 
@@ -150,7 +155,8 @@ body {
   font-size: 12px;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 550px) {
+  .lugar-ubicacion,
   .zona-horaria,
   .pais {
     display: none;
